clusters/cl03/apps/rhbk/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhbk
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
  labels:
    app.kubernetes.io/name: rhbk
    app.kubernetes.io/part-of: arencloud-identity
