clusters/cl03/apps/rhbk/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rhbk
  namespace: rhbk
  annotations:
    argocd.argoproj.io/sync-wave: "20"
  labels:
    app.kubernetes.io/name: rhbk
    app.kubernetes.io/component: gateway
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: rhbk
      namespace: rhbk
      sectionName: https
  hostnames:
    - sso.arencloud.com
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: rhbk-service
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
